--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -29,6 +29,10 @@
     gap: 2rem;
     margin-top: 3rem;
 
+    a {
+      text-decoration: none;
+    }
+
     .started-btn {
       background-color: #6059c9;
       color: #fffcf7;
